--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,12 @@
 <div class="row">
     <div class="hero-image">
         <div class="overlay-hero">
-            <h4>The Seed Shelf</h4>
-            <p>Learn how to grow your vegetables, fruit, herbs and plants.</p>
-            <p>Add your own seeds so you can teach others.</p>
-            <a href="{{ url_for('seeds') }}" class="waves-effect waves-light btn light-green">Find Seeds</a>
+            <div>
+                <h4>The Seed Shelf</h4>
+                <p>Learn how to grow your vegetables, fruit, herbs and plants.</p>
+                <p>Add your own seeds so you can teach others.</p>
+                <a href="{{ url_for('seeds') }}" class="waves-effect waves-light btn light-green">Find Seeds</a>
+            </div>
         </div>
     </div>
 </div>
